--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li class="header-item"><a href="">Контакти</a></li>
     <li class="header-item"><a href="">Головна</a></li>
     <li class="header-item"><a href="">Програма</a></li>
-    <li class="header-button"><button type="button">Як потрапити</button></li>
+    <li class="header-item button"><a href="">Як потрапити</a></li>
 </ul>
 </section>
 <h1>Фестиваль Перемоги України</h1>
