--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+<link rel="stylesheet" href="./css/styles.css">
 
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="header">
+        <div class="container">
         <section class="header-section">
             <img class="header-logo" src="./images/Subtract.jpg" alt="logo" class="logo">
 <ul class="header-list">
@@ -24,18 +26,20 @@
 </section>
 <h1>Фестиваль Перемоги України</h1>
 <p class="section-description">Свято для усіх українців, які працювали, боролися й вірили у перемогу</p>
-       
+</div>  
     </header>
 <main>
 <section class="main-section">
+    <div class="container">
     <h2 class="main-section-title">Програма фестивалю</h2>
     <p class="main-section-discription">3 сцени, щоб добре й із задоволенням провести час</p>
     <p class="main-section-text">Усі сцени розташовані так, щоб вам було зручно ходити <br> між ними, і вони одна одну не глушили</p>
     <ul class="main-section-list">
         <li class="main-section-item">
+            <div class="flex-main">
             <h3>Сцена Перемоги</h3>
             <p>Розбудова України після війни</p>
-            <ul>
+            <ul class="main-section-list">
                 <li>Виступ Президента України <br>
                     <time>10:00-12:00</time>
                 </li>
@@ -49,10 +53,16 @@
                     <time>21:25-21:30</time>
                 </li>
             </ul>
-            <img src="./images/Сцена1.jpg" alt="scine">
-
+        </div>
+        <div class="image">
+            <img src="./images/Сцена1.jpg" alt="scine" width="585"
+            height="424">
+        </div>
         </li>
-        <li>
+    
+        <li class="main-section-item">
+            <div class="flex-main">
+
             <h3>Сцена "Музика"</h3>
             <ul>
                 <li>Артем Квасоваров <br>
@@ -74,9 +84,15 @@
                     <time>20:00-21:00</time>
                 </li>
             </ul>
+        </div>
+        <div class="image">
+
             <img src="./images/Сцена2.jpg" alt="scine">
+        </div>
         </li>
-        <li>
+        <li class="main-section-item">
+            <div class="flex-main">
+
             <h3>Сцена "Майстер-класи для дітей"</h3>
             <ul>
                 <li>Музей науки <br>
@@ -95,9 +111,13 @@
                     <time>19:00-20:00</time>
                 </li>
             </ul>
+        </div>
+        <div class="image">
+
             <img src="./images/Сцена3.jpg" alt="scine">
         </li>
     </ul>
+</div>
 </section>
 </main>
 <footer>
